--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
   </footer>
 
   <script type="module" src="./detect.js"></script>
-  <script type="module" src="./app.js"></script>
+  <script type="module" src="./app.v2.js"></script>
   <script>
     if ('serviceWorker' in navigator) { window.addEventListener('load', () => { navigator.serviceWorker.register('./sw.js').catch(console.error); }); }
   </script>
