--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               <th>Pack size</th>
               <th>Stems/pack</th>
               <th>Pack price (£)</th>
-              <th>Invoice date</th>
+             <th>Date received</th>
               <th>Cost/stem ex-VAT*</th>
               <th>Notes</th>
               <th></th>
