--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
         <label>VAT rate (%)
           <input type="number" id="vatRate" step="1" />
         </label>
+        <label>Prices include VAT?
+  <input type="checkbox" id="pricesIncludeVAT" />
+</label>
+
         <label>Labour rate (£/hour)
           <input type="number" id="laborRate" step="0.01" />
         </label>
